Hero tagline expansion

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             background: linear-gradient(135deg, var(--soil-dark) 0%, var(--soil-medium) 100%);
             position: relative;
             overflow: hidden;
-            padding: 8rem 5% 0 5%%;
+            padding: 10rem 10% 2rem 10%;
         }
         
         .hero::before {
