Genesis Toroid concept addition

--- a/index.html
+++ b/index.html
@@ -1354,7 +1354,7 @@
                     <div class="ai-icon">🧠</div>
                     <h3>Pattern Recognition</h3>
                     <p>
-                        Our AI identifies patterns in fungal electrical signals the same way LLMs recognize 
+                        Our  identifies patterns in fungal electrical signals the same way LLMs recognize 
                         patterns in human language—detecting meaning in complex, dynamic communication systems.
                     </p>
                 </div>
@@ -1372,7 +1372,7 @@
                     <div class="ai-icon">🌐</div>
                     <h3>Bidirectional Learning</h3>
                     <p>
-                        As humans learn from fungal networks through AI interpretation, we gain insights into 
+                        As humans learn from fungal networks through  interpretation, we gain insights into 
                         ecosystem health, resilience patterns, and regenerative processes invisible to us before.
                     </p>
                 </div>
@@ -1383,7 +1383,7 @@
                 <p>
                     We stand at a unique moment in history: artificial intelligence sophisticated enough to decode 
                     biological communication systems meets humanity's urgent need to restore our relationship with 
-                    living soil. The Genesis Column AI doesn't just stimulate fungal growth—it creates a two-way 
+                    living soil. The Genesis Toroid AI doesn't just stimulate fungal growth—it creates a two-way 
                     dialogue between human technology and nature's intelligence, allowing us to learn from billions 
                     of years of evolutionary wisdom encoded in mycorrhizal networks.
                 </p>
@@ -1562,7 +1562,7 @@
                 </p>
                 <p style="margin-top: 1.5rem;">
                     Each generation taught us something new, not just about engineering, but about the collaboration 
-                    itself. The Genesis Column isn't just a product of human ingenuity or artificial intelligence—
+                    itself. The Genesis Toroid isn't just a product of human ingenuity or artificial intelligence—
                     it's the offspring of <strong>collaborative intelligence</strong>, where different forms of 
                     thinking combine to create something neither could have envisioned alone.
                 </p>
@@ -1822,7 +1822,7 @@
     <section id="product">
         <div class="container">
             <div class="section-header">
-                <h2>Genesis Column AI</h2>
+                <h2>Genesis Toroid AI</h2>
                 <p>Next-generation acoustic soil restoration system</p>
             </div>
             
@@ -1836,7 +1836,7 @@
                 <div class="product-details">
                     <h3>Intelligent Soil Restoration</h3>
                     <p>
-                        The Genesis Column AI represents a breakthrough in agricultural technology. 
+                        The Genesis Toroid AI represents a breakthrough in agricultural technology. 
                         By combining precision acoustic stimulation with artificial intelligence, 
                         it actively monitors and optimizes fungal network activity to restore soil health 
                         and enhance crop productivity.
